import "util.proto";

option java_package = "waldo_protobuffs";
option java_outer_classname = "PartnerBackoutCommitRequestProto";


message PartnerBackoutCommitRequest
{
    required UUID event_uuid = 1;
}

